# ical-paylog

./: .gitignore  README.md  analysis-sample.xlsx  pyproject.toml  sync.py
